--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "cron": "^1.3.0",
     "dedent": "^0.7.0",
     "dotenv": "^6.0.0",
+    "koa": "^2.5.1",
+    "koa-body": "^4.0.3",
+    "koa-router": "^7.4.0",
     "lodash.get": "^4.4.2",
     "moment": "^2.22.1",
     "mysql-query-promise": "^1.0.1",
